--- a/styles/blocknote-styles.scss
+++ b/styles/blocknote-styles.scss
@@ -632,7 +632,7 @@ $grid: repeating-linear-gradient(
     color: $text-dark !important;
   }
   .tiptap {
-    width: 100vw;
+    max-width: 100vw;
     color: $text-dark;
     div[data-content-type="heading"] {
       font-weight: bold;
@@ -759,14 +759,14 @@ $grid: repeating-linear-gradient(
       .analysis-table,
       .analysis-results {
         @include table-chart;
-        width: 100%;
+        // somehow just giving it a width, any width (not max/min width) fixes the sidebars. ¯\_(ツ)_/¯
+        width: 400px;
         // border: 1px solid $light-gray;
         border-radius: 4px;
         box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
         padding: 0.5em;
         .ant-tabs {
           flex-grow: 2;
-
           // width: 90vw;
           width: 100%;
           .ant-tabs-content-holder {
