--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -21,7 +21,7 @@ $medium-green: #96c880;
 $medium-green-opacity: color.scale(#c1e1b3, $alpha: -70%);
 
 $medium-red: #efa1a1;
-$medium-red-opacity: color.scale(#fca5a5, $alpha: -70%);
+$medium-red-opacity: color.scale(#efa1a1, $alpha: -70%);
 
 $dark-blue: #2957ff;
 $dark-orange: #ff8229;
