--- a/styles/blocknote-styles.scss
+++ b/styles/blocknote-styles.scss
@@ -954,7 +954,7 @@ $grid: repeating-linear-gradient(
               }
 
               &.tool-delete {
-                background-color: $dark-red;
+                background-color: $medium-red;
               }
             }
           }
