change a few styles. fix boxplot errors for new ListWithDefault param type

--- a/frontend/styles/blocknote-styles.scss
+++ b/frontend/styles/blocknote-styles.scss
@@ -1111,7 +1111,7 @@ $grid: repeating-linear-gradient(
                 pre,
                 textarea,
                 span {
-                  font-family: $code;
+                  font-family: $code !important;
                   font-size: 13px !important;
                 }
               }
