--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
+/* 
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -109,4 +109,4 @@ a {
   html {
     color-scheme: light;
   }
-}
+} */
