1. fix styling to prevent code blocks outside of "pre" being affected. 2. fix image path route. only send file name in the mdx report. 3. remove escaping markdown. 4. fix clarification getting and setting in oracle-frontend by adding some checks.

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -110,3 +110,8 @@ a {
     color-scheme: light;
   }
 } */
+
+.oracle-report-tiptap pre code{
+  color: theme('colors.gray.200');
+  text-shadow: none;
+}
