1. setup comment addition using tiptap commands. 2. start a basic route for fetching comments. 3. setup a table for storing comments.

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -150,3 +150,12 @@ a {
 .ant-drawer .ant-drawer-body {
   padding: 0;
 }
+
+.oracle-report-comment {
+  background-color: theme("colors.amber.100");
+  text-decoration: underline;
+  text-decoration-color: theme("colors.amber.400");
+  text-decoration-thickness: 4px;
+  text-underline-offset: 4px;
+  cursor:pointer;
+}
