add comment and mdx updating routes

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -152,10 +152,5 @@ a {
 }
 
 .oracle-report-comment {
-  background-color: theme("colors.amber.100");
-  text-decoration: underline;
-  text-decoration-color: theme("colors.amber.400");
-  text-decoration-thickness: 4px;
-  text-underline-offset: 4px;
-  cursor:pointer;
+  @apply bg-amber-100 underline underline-offset-4 decoration-4 decoration-amber-400 cursor-pointer dark:bg-amber-800 dark:text-white dark:underline dark:decoration-4 dark:decoration-amber-400;
 }
