--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -152,5 +152,21 @@ a {
 }
 
 .oracle-report-comment {
-  @apply bg-amber-100 underline underline-offset-4 decoration-4 decoration-amber-400 cursor-pointer dark:bg-amber-800 dark:text-white dark:underline dark:decoration-4 dark:decoration-amber-400;
+  @apply bg-amber-100 underline underline-offset-4 decoration-4 decoration-amber-400 cursor-pointer dark:bg-amber-800 text-gray-700 dark:text-white dark:underline dark:decoration-4 dark:decoration-amber-400;
+}
+
+.revise-modal-comment-container {
+  @apply text-sm m-2 rounded-md border dark:border-gray-600 text-gray-600 dark:text-gray-200 overflow-hidden;
+}
+
+.revise-modal-highlight {
+  @apply p-2 py-4 border-b dark:border-gray-600 text-gray-400;
+}
+
+.revise-modal-comment-text {
+  @apply p-2;
+}
+
+.revise-modal-header {
+  @apply px-2 p-2 text-xs text-gray-400 bg-gray-50 dark:bg-gray-700;
 }
