1. add error routes for when a report is being revised and another revision is somehow requested. 2. add route to get report status. 3. fix some styling

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -160,7 +160,7 @@ a {
 }
 
 .revise-modal-highlight {
-  @apply p-2 py-4 border-b dark:border-gray-600 text-gray-400;
+  @apply p-2 py-4 border-b dark:border-gray-600;
 }
 
 .revise-modal-comment-text {
